--- a/Stylist/Base.lproj/Main.storyboard
+++ b/Stylist/Base.lproj/Main.storyboard
@@ -171,7 +171,7 @@
                                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
                                                 <connections>
-                                                    <segue destination="o3U-2Q-uRg" kind="unwind" unwindAction="unwindToTrend:" id="UAt-Zw-QJy"/>
+                                                    <action selector="finishButt" destination="4H1-83-9jU" eventType="touchUpInside" id="5yo-Gz-Zzc"/>
                                                 </connections>
                                             </button>
                                         </barButtonItem>
@@ -251,12 +251,14 @@
                         <outlet property="collectionView" destination="EaR-ET-k4R" id="mM4-wQ-PcB"/>
                         <outlet property="searchBar" destination="mlt-5h-nGT" id="1HE-F1-nK7"/>
                         <segue destination="Rz1-LF-e1Z" kind="modal" identifier="showImage" animates="NO" id="6Si-2s-eq2"/>
+                        <segue destination="o3U-2Q-uRg" kind="unwind" identifier="topsVCtoVC" unwindAction="unwindToTrend:" id="Mu4-My-B2u"/>
+                        <segue destination="8vQ-e4-Iq2" kind="modal" identifier="topsVCtoVCnotUnwind" id="PbG-0j-NXL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6d5-AW-rn5" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="o3U-2Q-uRg" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="591" y="-116"/>
+            <point key="canvasLocation" x="632" y="-99"/>
         </scene>
         <!--Profile Pic View Controller-->
         <scene sceneID="m1t-JV-MjG">
@@ -867,8 +869,9 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="HkD-ag-DXk"/>
-        <segue reference="XKH-ik-kmo"/>
+        <segue reference="PbG-0j-NXL"/>
         <segue reference="i8v-OW-VyQ"/>
+        <segue reference="XKH-ik-kmo"/>
+        <segue reference="HkD-ag-DXk"/>
     </inferredMetricsTieBreakers>
 </document>
